listings/ch17-async-await/listing-17-02/output.txt
$ cargo run
   Compiling async_await v0.1.0 (file:///projects/async_await)
error[E0728]: `await` is only allowed inside `async` functions and blocks
 --> src/main.rs:2:20
  |
1 | fn main() {
  | --------- this is not `async`
2 |     hello("async").await;
  |                    ^^^^^ only allowed inside `async` functions and blocks

For more information about this error, try `rustc --explain E0728`.
error: could not compile `async_await` (bin "async_await") due to 1 previous error
